// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table > renders with class correctly 1`] = `
"<div class="overflow-x-auto absolute">
  <table class="min-w-full table-fixed divide-y divide-[--ui-border-accented]">
    <thead class="">
      <tr class="">
        <th class="px-4 py-3.5 text-sm text-[--ui-text-highlighted] text-left rtl:text-right font-semibold">Id</th>
        <th class="px-4 py-3.5 text-sm text-[--ui-text-highlighted] text-left rtl:text-right font-semibold">Amount</th>
        <th class="px-4 py-3.5 text-sm text-[--ui-text-highlighted] text-left rtl:text-right font-semibold">Status</th>
        <th class="px-4 py-3.5 text-sm text-[--ui-text-highlighted] text-left rtl:text-right font-semibold">Email</th>
      </tr>
    </thead>
    <tbody class="divide-y divide-[--ui-border]">
      <tr class="">
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">m5gr84i9</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">316</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">success</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">ken99@yahoo.com</td>
      </tr>
      <!--v-if-->
      <tr class="">
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">3u1reuv4</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">242</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">success</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">Abe45@gmail.com</td>
      </tr>
      <!--v-if-->
      <tr class="">
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">derv1ws0</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">837</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">processing</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">Monserrat44@gmail.com</td>
      </tr>
      <!--v-if-->
      <tr class="">
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">5kma53ae</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">874</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">success</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">Silas22@gmail.com</td>
      </tr>
      <!--v-if-->
      <tr class="">
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">bhqecj4p</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">721</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">failed</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">carmella@hotmail.com</td>
      </tr>
      <!--v-if-->
    </tbody>
  </table>
</div>"
`;

exports[`Table > renders with data correctly 1`] = `
"<div class="relative overflow-x-auto">
  <table class="min-w-full table-fixed divide-y divide-[--ui-border-accented]">
    <thead class="">
      <tr class="">
        <th class="px-4 py-3.5 text-sm text-[--ui-text-highlighted] text-left rtl:text-right font-semibold">Id</th>
        <th class="px-4 py-3.5 text-sm text-[--ui-text-highlighted] text-left rtl:text-right font-semibold">Amount</th>
        <th class="px-4 py-3.5 text-sm text-[--ui-text-highlighted] text-left rtl:text-right font-semibold">Status</th>
        <th class="px-4 py-3.5 text-sm text-[--ui-text-highlighted] text-left rtl:text-right font-semibold">Email</th>
      </tr>
    </thead>
    <tbody class="divide-y divide-[--ui-border]">
      <tr class="">
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">m5gr84i9</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">316</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">success</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">ken99@yahoo.com</td>
      </tr>
      <!--v-if-->
      <tr class="">
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">3u1reuv4</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">242</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">success</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">Abe45@gmail.com</td>
      </tr>
      <!--v-if-->
      <tr class="">
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">derv1ws0</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">837</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">processing</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">Monserrat44@gmail.com</td>
      </tr>
      <!--v-if-->
      <tr class="">
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">5kma53ae</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">874</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">success</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">Silas22@gmail.com</td>
      </tr>
      <!--v-if-->
      <tr class="">
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">bhqecj4p</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">721</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">failed</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">carmella@hotmail.com</td>
      </tr>
      <!--v-if-->
    </tbody>
  </table>
</div>"
`;

exports[`Table > renders with ui correctly 1`] = `
"<div class="relative overflow-x-auto">
  <table class="min-w-full divide-y divide-[--ui-border-accented] table-auto">
    <thead class="">
      <tr class="">
        <th class="px-4 py-3.5 text-sm text-[--ui-text-highlighted] text-left rtl:text-right font-semibold">Id</th>
        <th class="px-4 py-3.5 text-sm text-[--ui-text-highlighted] text-left rtl:text-right font-semibold">Amount</th>
        <th class="px-4 py-3.5 text-sm text-[--ui-text-highlighted] text-left rtl:text-right font-semibold">Status</th>
        <th class="px-4 py-3.5 text-sm text-[--ui-text-highlighted] text-left rtl:text-right font-semibold">Email</th>
      </tr>
    </thead>
    <tbody class="divide-y divide-[--ui-border]">
      <tr class="">
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">m5gr84i9</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">316</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">success</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">ken99@yahoo.com</td>
      </tr>
      <!--v-if-->
      <tr class="">
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">3u1reuv4</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">242</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">success</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">Abe45@gmail.com</td>
      </tr>
      <!--v-if-->
      <tr class="">
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">derv1ws0</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">837</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">processing</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">Monserrat44@gmail.com</td>
      </tr>
      <!--v-if-->
      <tr class="">
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">5kma53ae</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">874</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">success</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">Silas22@gmail.com</td>
      </tr>
      <!--v-if-->
      <tr class="">
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">bhqecj4p</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">721</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">failed</td>
        <td class="p-4 text-sm text-[--ui-text-muted] whitespace-nowrap">carmella@hotmail.com</td>
      </tr>
      <!--v-if-->
    </tbody>
  </table>
</div>"
`;
